CSE420 Compiler Design/Labs/Lab 3/y.output
Terminals unused in grammar

   DOUBLE
   SWITCH
   CASE
   DEFAULT


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: variable_decl
    5     | func_definition

    6 $@1: /* empty */

    7 func_definition: type_specifier ID LPAREN param_list RPAREN $@1 compound_statement

    8 $@2: /* empty */

    9 func_definition: type_specifier ID LPAREN RPAREN $@2 compound_statement

   10 param_list: param_list COMMA type_specifier ID
   11           | param_list COMMA type_specifier
   12           | type_specifier ID
   13           | type_specifier

   14 $@3: /* empty */

   15 compound_statement: LCURL $@3 statements RCURL

   16 $@4: /* empty */

   17 compound_statement: LCURL $@4 RCURL

   18 variable_decl: type_specifier declaration_list SEMICOLON

   19 type_specifier: INT
   20               | FLOAT
   21               | VOID
   22               | CHAR

   23 declaration_list: declaration_list COMMA ID
   24                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   25                 | ID
   26                 | ID LTHIRD CONST_INT RTHIRD

   27 statements: statement
   28           | statements statement

   29 statement: variable_decl
   30          | expression_statement
   31          | compound_statement
   32          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   33          | DO statement WHILE LPAREN expression RPAREN SEMICOLON
   34          | BREAK SEMICOLON
   35          | CONTINUE SEMICOLON
   36          | IF LPAREN expression RPAREN statement
   37          | IF LPAREN expression RPAREN statement ELSE statement
   38          | WHILE LPAREN expression RPAREN statement
   39          | PRINTLN LPAREN ID RPAREN SEMICOLON
   40          | RETURN expression SEMICOLON

   41 expression_statement: SEMICOLON
   42                     | expression SEMICOLON

   43 variable: ID
   44         | ID LTHIRD expression RTHIRD

   45 expression: logic_expression
   46           | variable ASSIGNOP logic_expression

   47 logic_expression: rel_expression
   48                 | rel_expression LOGICOP rel_expression

   49 rel_expression: simple_expression
   50               | simple_expression RELOP simple_expression

   51 simple_expression: term
   52                  | simple_expression ADDOP term

   53 term: unary_expression
   54     | term MULOP unary_expression

   55 unary_expression: ADDOP unary_expression
   56                 | NOT unary_expression
   57                 | factor_info

   58 factor_info: factor

   59 factor: variable
   60       | ID LPAREN argument_list RPAREN
   61       | LPAREN expression RPAREN
   62       | CONST_INT
   63       | CONST_FLOAT
   64       | variable INCOP
   65       | variable DECOP

   66 argument_list: arguments
   67              | /* empty */

   68 arguments: arguments COMMA logic_expression
   69          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 36 37
ELSE (259) 37
FOR (260) 32
WHILE (261) 33 38
DO (262) 33
BREAK (263) 34
INT (264) 19
CHAR (265) 22
FLOAT (266) 20
DOUBLE (267)
VOID (268) 21
RETURN (269) 40
SWITCH (270)
CASE (271)
DEFAULT (272)
CONTINUE (273) 35
PRINTLN (274) 39
ADDOP (275) 52 55
MULOP (276) 54
INCOP (277) 64
DECOP (278) 65
RELOP (279) 50
ASSIGNOP (280) 46
LOGICOP (281) 48
NOT (282) 56
LPAREN (283) 7 9 32 33 36 37 38 39 60 61
RPAREN (284) 7 9 32 33 36 37 38 39 60 61
LCURL (285) 15 17
RCURL (286) 15 17
LTHIRD (287) 24 26 44
RTHIRD (288) 24 26 44
COMMA (289) 10 11 23 24 68
SEMICOLON (290) 18 33 34 35 39 40 41 42
CONST_INT (291) 24 26 62
CONST_FLOAT (292) 63
ID (293) 7 9 10 12 23 24 25 26 39 43 44 60
LOWER_THAN_ELSE (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
start (41)
    on left: 1, on right: 0
program (42)
    on left: 2 3, on right: 1 2
unit (43)
    on left: 4 5, on right: 2 3
func_definition (44)
    on left: 7 9, on right: 5
$@1 (45)
    on left: 6, on right: 7
$@2 (46)
    on left: 8, on right: 9
param_list (47)
    on left: 10 11 12 13, on right: 7 10 11
compound_statement (48)
    on left: 15 17, on right: 7 9 31
$@3 (49)
    on left: 14, on right: 15
$@4 (50)
    on left: 16, on right: 17
variable_decl (51)
    on left: 18, on right: 4 29
type_specifier (52)
    on left: 19 20 21 22, on right: 7 9 10 11 12 13 18
declaration_list (53)
    on left: 23 24 25 26, on right: 18 23 24
statements (54)
    on left: 27 28, on right: 15 28
statement (55)
    on left: 29 30 31 32 33 34 35 36 37 38 39 40, on right: 27 28 32
    33 36 37 38
expression_statement (56)
    on left: 41 42, on right: 30 32
variable (57)
    on left: 43 44, on right: 46 59 64 65
expression (58)
    on left: 45 46, on right: 32 33 36 37 38 40 42 44 61
logic_expression (59)
    on left: 47 48, on right: 45 46 68 69
rel_expression (60)
    on left: 49 50, on right: 47 48
simple_expression (61)
    on left: 51 52, on right: 49 50 52
term (62)
    on left: 53 54, on right: 51 52 54
unary_expression (63)
    on left: 55 56 57, on right: 53 54 55 56
factor_info (64)
    on left: 58, on right: 57
factor (65)
    on left: 59 60 61 62 63 64 65, on right: 58
argument_list (66)
    on left: 66 67, on right: 60
arguments (67)
    on left: 68 69, on right: 66 68


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    CHAR   shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    start            go to state 5
    program          go to state 6
    unit             go to state 7
    func_definition  go to state 8
    variable_decl    go to state 9
    type_specifier   go to state 10


State 1

   19 type_specifier: INT .

    $default  reduce using rule 19 (type_specifier)


State 2

   22 type_specifier: CHAR .

    $default  reduce using rule 22 (type_specifier)


State 3

   20 type_specifier: FLOAT .

    $default  reduce using rule 20 (type_specifier)


State 4

   21 type_specifier: VOID .

    $default  reduce using rule 21 (type_specifier)


State 5

    0 $accept: start . $end

    $end  shift, and go to state 11


State 6

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    CHAR   shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    $default  reduce using rule 1 (start)

    unit             go to state 12
    func_definition  go to state 8
    variable_decl    go to state 9
    type_specifier   go to state 10


State 7

    3 program: unit .

    $default  reduce using rule 3 (program)


State 8

    5 unit: func_definition .

    $default  reduce using rule 5 (unit)


State 9

    4 unit: variable_decl .

    $default  reduce using rule 4 (unit)


State 10

    7 func_definition: type_specifier . ID LPAREN param_list RPAREN $@1 compound_statement
    9                | type_specifier . ID LPAREN RPAREN $@2 compound_statement
   18 variable_decl: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 13

    declaration_list  go to state 14


State 11

    0 $accept: start $end .

    $default  accept


State 12

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 13

    7 func_definition: type_specifier ID . LPAREN param_list RPAREN $@1 compound_statement
    9                | type_specifier ID . LPAREN RPAREN $@2 compound_statement
   25 declaration_list: ID .
   26                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 15
    LTHIRD  shift, and go to state 16

    $default  reduce using rule 25 (declaration_list)


State 14

   18 variable_decl: type_specifier declaration_list . SEMICOLON
   23 declaration_list: declaration_list . COMMA ID
   24                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 17
    SEMICOLON  shift, and go to state 18


State 15

    7 func_definition: type_specifier ID LPAREN . param_list RPAREN $@1 compound_statement
    9                | type_specifier ID LPAREN . RPAREN $@2 compound_statement

    INT     shift, and go to state 1
    CHAR    shift, and go to state 2
    FLOAT   shift, and go to state 3
    VOID    shift, and go to state 4
    RPAREN  shift, and go to state 19

    param_list      go to state 20
    type_specifier  go to state 21


State 16

   26 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 22


State 17

   23 declaration_list: declaration_list COMMA . ID
   24                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 23


State 18

   18 variable_decl: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 18 (variable_decl)


State 19

    9 func_definition: type_specifier ID LPAREN RPAREN . $@2 compound_statement

    $default  reduce using rule 8 ($@2)

    $@2  go to state 24


State 20

    7 func_definition: type_specifier ID LPAREN param_list . RPAREN $@1 compound_statement
   10 param_list: param_list . COMMA type_specifier ID
   11           | param_list . COMMA type_specifier

    RPAREN  shift, and go to state 25
    COMMA   shift, and go to state 26


State 21

   12 param_list: type_specifier . ID
   13           | type_specifier .

    ID  shift, and go to state 27

    $default  reduce using rule 13 (param_list)


State 22

   26 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 28


State 23

   23 declaration_list: declaration_list COMMA ID .
   24                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 29

    $default  reduce using rule 23 (declaration_list)


State 24

    9 func_definition: type_specifier ID LPAREN RPAREN $@2 . compound_statement

    LCURL  shift, and go to state 30

    compound_statement  go to state 31


State 25

    7 func_definition: type_specifier ID LPAREN param_list RPAREN . $@1 compound_statement

    $default  reduce using rule 6 ($@1)

    $@1  go to state 32


State 26

   10 param_list: param_list COMMA . type_specifier ID
   11           | param_list COMMA . type_specifier

    INT    shift, and go to state 1
    CHAR   shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    type_specifier  go to state 33


State 27

   12 param_list: type_specifier ID .

    $default  reduce using rule 12 (param_list)


State 28

   26 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 26 (declaration_list)


State 29

   24 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 34


State 30

   15 compound_statement: LCURL . $@3 statements RCURL
   17                   | LCURL . $@4 RCURL

    RCURL     reduce using rule 16 ($@4)
    $default  reduce using rule 14 ($@3)

    $@3  go to state 35
    $@4  go to state 36


State 31

    9 func_definition: type_specifier ID LPAREN RPAREN $@2 compound_statement .

    $default  reduce using rule 9 (func_definition)


State 32

    7 func_definition: type_specifier ID LPAREN param_list RPAREN $@1 . compound_statement

    LCURL  shift, and go to state 30

    compound_statement  go to state 37


State 33

   10 param_list: param_list COMMA type_specifier . ID
   11           | param_list COMMA type_specifier .

    ID  shift, and go to state 38

    $default  reduce using rule 11 (param_list)


State 34

   24 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 39


State 35

   15 compound_statement: LCURL $@3 . statements RCURL

    IF           shift, and go to state 40
    FOR          shift, and go to state 41
    WHILE        shift, and go to state 42
    DO           shift, and go to state 43
    BREAK        shift, and go to state 44
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 45
    CONTINUE     shift, and go to state 46
    PRINTLN      shift, and go to state 47
    ADDOP        shift, and go to state 48
    NOT          shift, and go to state 49
    LPAREN       shift, and go to state 50
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 51
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 54

    compound_statement    go to state 55
    variable_decl         go to state 56
    type_specifier        go to state 57
    statements            go to state 58
    statement             go to state 59
    expression_statement  go to state 60
    variable              go to state 61
    expression            go to state 62
    logic_expression      go to state 63
    rel_expression        go to state 64
    simple_expression     go to state 65
    term                  go to state 66
    unary_expression      go to state 67
    factor_info           go to state 68
    factor                go to state 69


State 36

   17 compound_statement: LCURL $@4 . RCURL

    RCURL  shift, and go to state 70


State 37

    7 func_definition: type_specifier ID LPAREN param_list RPAREN $@1 compound_statement .

    $default  reduce using rule 7 (func_definition)


State 38

   10 param_list: param_list COMMA type_specifier ID .

    $default  reduce using rule 10 (param_list)


State 39

   24 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 24 (declaration_list)


State 40

   36 statement: IF . LPAREN expression RPAREN statement
   37          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 71


State 41

   32 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 72


State 42

   38 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 73


State 43

   33 statement: DO . statement WHILE LPAREN expression RPAREN SEMICOLON

    IF           shift, and go to state 40
    FOR          shift, and go to state 41
    WHILE        shift, and go to state 42
    DO           shift, and go to state 43
    BREAK        shift, and go to state 44
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 45
    CONTINUE     shift, and go to state 46
    PRINTLN      shift, and go to state 47
    ADDOP        shift, and go to state 48
    NOT          shift, and go to state 49
    LPAREN       shift, and go to state 50
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 51
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 54

    compound_statement    go to state 55
    variable_decl         go to state 56
    type_specifier        go to state 57
    statement             go to state 74
    expression_statement  go to state 60
    variable              go to state 61
    expression            go to state 62
    logic_expression      go to state 63
    rel_expression        go to state 64
    simple_expression     go to state 65
    term                  go to state 66
    unary_expression      go to state 67
    factor_info           go to state 68
    factor                go to state 69


State 44

   34 statement: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 75


State 45

   40 statement: RETURN . expression SEMICOLON

    ADDOP        shift, and go to state 48
    NOT          shift, and go to state 49
    LPAREN       shift, and go to state 50
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 54

    variable           go to state 61
    expression         go to state 76
    logic_expression   go to state 63
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor_info        go to state 68
    factor             go to state 69


State 46

   35 statement: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 77


State 47

   39 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 78


State 48

   55 unary_expression: ADDOP . unary_expression

    ADDOP        shift, and go to state 48
    NOT          shift, and go to state 49
    LPAREN       shift, and go to state 50
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 54

    variable          go to state 79
    unary_expression  go to state 80
    factor_info       go to state 68
    factor            go to state 69


State 49

   56 unary_expression: NOT . unary_expression

    ADDOP        shift, and go to state 48
    NOT          shift, and go to state 49
    LPAREN       shift, and go to state 50
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 54

    variable          go to state 79
    unary_expression  go to state 81
    factor_info       go to state 68
    factor            go to state 69


State 50

   61 factor: LPAREN . expression RPAREN

    ADDOP        shift, and go to state 48
    NOT          shift, and go to state 49
    LPAREN       shift, and go to state 50
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 54

    variable           go to state 61
    expression         go to state 82
    logic_expression   go to state 63
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor_info        go to state 68
    factor             go to state 69


State 51

   41 expression_statement: SEMICOLON .

    $default  reduce using rule 41 (expression_statement)


State 52

   62 factor: CONST_INT .

    $default  reduce using rule 62 (factor)


State 53

   63 factor: CONST_FLOAT .

    $default  reduce using rule 63 (factor)


State 54

   43 variable: ID .
   44         | ID . LTHIRD expression RTHIRD
   60 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 83
    LTHIRD  shift, and go to state 84

    $default  reduce using rule 43 (variable)


State 55

   31 statement: compound_statement .

    $default  reduce using rule 31 (statement)


State 56

   29 statement: variable_decl .

    $default  reduce using rule 29 (statement)


State 57

   18 variable_decl: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 85

    declaration_list  go to state 14


State 58

   15 compound_statement: LCURL $@3 statements . RCURL
   28 statements: statements . statement

    IF           shift, and go to state 40
    FOR          shift, and go to state 41
    WHILE        shift, and go to state 42
    DO           shift, and go to state 43
    BREAK        shift, and go to state 44
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 45
    CONTINUE     shift, and go to state 46
    PRINTLN      shift, and go to state 47
    ADDOP        shift, and go to state 48
    NOT          shift, and go to state 49
    LPAREN       shift, and go to state 50
    LCURL        shift, and go to state 30
    RCURL        shift, and go to state 86
    SEMICOLON    shift, and go to state 51
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 54

    compound_statement    go to state 55
    variable_decl         go to state 56
    type_specifier        go to state 57
    statement             go to state 87
    expression_statement  go to state 60
    variable              go to state 61
    expression            go to state 62
    logic_expression      go to state 63
    rel_expression        go to state 64
    simple_expression     go to state 65
    term                  go to state 66
    unary_expression      go to state 67
    factor_info           go to state 68
    factor                go to state 69


State 59

   27 statements: statement .

    $default  reduce using rule 27 (statements)


State 60

   30 statement: expression_statement .

    $default  reduce using rule 30 (statement)


State 61

   46 expression: variable . ASSIGNOP logic_expression
   59 factor: variable .
   64       | variable . INCOP
   65       | variable . DECOP

    INCOP     shift, and go to state 88
    DECOP     shift, and go to state 89
    ASSIGNOP  shift, and go to state 90

    $default  reduce using rule 59 (factor)


State 62

   42 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 91


State 63

   45 expression: logic_expression .

    $default  reduce using rule 45 (expression)


State 64

   47 logic_expression: rel_expression .
   48                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 92

    $default  reduce using rule 47 (logic_expression)


State 65

   49 rel_expression: simple_expression .
   50               | simple_expression . RELOP simple_expression
   52 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 93
    RELOP  shift, and go to state 94

    $default  reduce using rule 49 (rel_expression)


State 66

   51 simple_expression: term .
   54 term: term . MULOP unary_expression

    MULOP  shift, and go to state 95

    $default  reduce using rule 51 (simple_expression)


State 67

   53 term: unary_expression .

    $default  reduce using rule 53 (term)


State 68

   57 unary_expression: factor_info .

    $default  reduce using rule 57 (unary_expression)


State 69

   58 factor_info: factor .

    $default  reduce using rule 58 (factor_info)


State 70

   17 compound_statement: LCURL $@4 RCURL .

    $default  reduce using rule 17 (compound_statement)


State 71

   36 statement: IF LPAREN . expression RPAREN statement
   37          | IF LPAREN . expression RPAREN statement ELSE statement

    ADDOP        shift, and go to state 48
    NOT          shift, and go to state 49
    LPAREN       shift, and go to state 50
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 54

    variable           go to state 61
    expression         go to state 96
    logic_expression   go to state 63
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor_info        go to state 68
    factor             go to state 69


State 72

   32 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 48
    NOT          shift, and go to state 49
    LPAREN       shift, and go to state 50
    SEMICOLON    shift, and go to state 51
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 54

    expression_statement  go to state 97
    variable              go to state 61
    expression            go to state 62
    logic_expression      go to state 63
    rel_expression        go to state 64
    simple_expression     go to state 65
    term                  go to state 66
    unary_expression      go to state 67
    factor_info           go to state 68
    factor                go to state 69


State 73

   38 statement: WHILE LPAREN . expression RPAREN statement

    ADDOP        shift, and go to state 48
    NOT          shift, and go to state 49
    LPAREN       shift, and go to state 50
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 54

    variable           go to state 61
    expression         go to state 98
    logic_expression   go to state 63
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor_info        go to state 68
    factor             go to state 69


State 74

   33 statement: DO statement . WHILE LPAREN expression RPAREN SEMICOLON

    WHILE  shift, and go to state 99


State 75

   34 statement: BREAK SEMICOLON .

    $default  reduce using rule 34 (statement)


State 76

   40 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 100


State 77

   35 statement: CONTINUE SEMICOLON .

    $default  reduce using rule 35 (statement)


State 78

   39 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 101


State 79

   59 factor: variable .
   64       | variable . INCOP
   65       | variable . DECOP

    INCOP  shift, and go to state 88
    DECOP  shift, and go to state 89

    $default  reduce using rule 59 (factor)


State 80

   55 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 55 (unary_expression)


State 81

   56 unary_expression: NOT unary_expression .

    $default  reduce using rule 56 (unary_expression)


State 82

   61 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 102


State 83

   60 factor: ID LPAREN . argument_list RPAREN

    ADDOP        shift, and go to state 48
    NOT          shift, and go to state 49
    LPAREN       shift, and go to state 50
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 54

    $default  reduce using rule 67 (argument_list)

    variable           go to state 79
    logic_expression   go to state 103
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor_info        go to state 68
    factor             go to state 69
    argument_list      go to state 104
    arguments          go to state 105


State 84

   44 variable: ID LTHIRD . expression RTHIRD

    ADDOP        shift, and go to state 48
    NOT          shift, and go to state 49
    LPAREN       shift, and go to state 50
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 54

    variable           go to state 61
    expression         go to state 106
    logic_expression   go to state 63
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor_info        go to state 68
    factor             go to state 69


State 85

   25 declaration_list: ID .
   26                 | ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 16

    $default  reduce using rule 25 (declaration_list)


State 86

   15 compound_statement: LCURL $@3 statements RCURL .

    $default  reduce using rule 15 (compound_statement)


State 87

   28 statements: statements statement .

    $default  reduce using rule 28 (statements)


State 88

   64 factor: variable INCOP .

    $default  reduce using rule 64 (factor)


State 89

   65 factor: variable DECOP .

    $default  reduce using rule 65 (factor)


State 90

   46 expression: variable ASSIGNOP . logic_expression

    ADDOP        shift, and go to state 48
    NOT          shift, and go to state 49
    LPAREN       shift, and go to state 50
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 54

    variable           go to state 79
    logic_expression   go to state 107
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor_info        go to state 68
    factor             go to state 69


State 91

   42 expression_statement: expression SEMICOLON .

    $default  reduce using rule 42 (expression_statement)


State 92

   48 logic_expression: rel_expression LOGICOP . rel_expression

    ADDOP        shift, and go to state 48
    NOT          shift, and go to state 49
    LPAREN       shift, and go to state 50
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 54

    variable           go to state 79
    rel_expression     go to state 108
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor_info        go to state 68
    factor             go to state 69


State 93

   52 simple_expression: simple_expression ADDOP . term

    ADDOP        shift, and go to state 48
    NOT          shift, and go to state 49
    LPAREN       shift, and go to state 50
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 54

    variable          go to state 79
    term              go to state 109
    unary_expression  go to state 67
    factor_info       go to state 68
    factor            go to state 69


State 94

   50 rel_expression: simple_expression RELOP . simple_expression

    ADDOP        shift, and go to state 48
    NOT          shift, and go to state 49
    LPAREN       shift, and go to state 50
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 54

    variable           go to state 79
    simple_expression  go to state 110
    term               go to state 66
    unary_expression   go to state 67
    factor_info        go to state 68
    factor             go to state 69


State 95

   54 term: term MULOP . unary_expression

    ADDOP        shift, and go to state 48
    NOT          shift, and go to state 49
    LPAREN       shift, and go to state 50
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 54

    variable          go to state 79
    unary_expression  go to state 111
    factor_info       go to state 68
    factor            go to state 69


State 96

   36 statement: IF LPAREN expression . RPAREN statement
   37          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 112


State 97

   32 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 48
    NOT          shift, and go to state 49
    LPAREN       shift, and go to state 50
    SEMICOLON    shift, and go to state 51
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 54

    expression_statement  go to state 113
    variable              go to state 61
    expression            go to state 62
    logic_expression      go to state 63
    rel_expression        go to state 64
    simple_expression     go to state 65
    term                  go to state 66
    unary_expression      go to state 67
    factor_info           go to state 68
    factor                go to state 69


State 98

   38 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 114


State 99

   33 statement: DO statement WHILE . LPAREN expression RPAREN SEMICOLON

    LPAREN  shift, and go to state 115


State 100

   40 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 40 (statement)


State 101

   39 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 116


State 102

   61 factor: LPAREN expression RPAREN .

    $default  reduce using rule 61 (factor)


State 103

   69 arguments: logic_expression .

    $default  reduce using rule 69 (arguments)


State 104

   60 factor: ID LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 117


State 105

   66 argument_list: arguments .
   68 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 118

    $default  reduce using rule 66 (argument_list)


State 106

   44 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 119


State 107

   46 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 46 (expression)


State 108

   48 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 48 (logic_expression)


State 109

   52 simple_expression: simple_expression ADDOP term .
   54 term: term . MULOP unary_expression

    MULOP  shift, and go to state 95

    $default  reduce using rule 52 (simple_expression)


State 110

   50 rel_expression: simple_expression RELOP simple_expression .
   52 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 93

    $default  reduce using rule 50 (rel_expression)


State 111

   54 term: term MULOP unary_expression .

    $default  reduce using rule 54 (term)


State 112

   36 statement: IF LPAREN expression RPAREN . statement
   37          | IF LPAREN expression RPAREN . statement ELSE statement

    IF           shift, and go to state 40
    FOR          shift, and go to state 41
    WHILE        shift, and go to state 42
    DO           shift, and go to state 43
    BREAK        shift, and go to state 44
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 45
    CONTINUE     shift, and go to state 46
    PRINTLN      shift, and go to state 47
    ADDOP        shift, and go to state 48
    NOT          shift, and go to state 49
    LPAREN       shift, and go to state 50
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 51
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 54

    compound_statement    go to state 55
    variable_decl         go to state 56
    type_specifier        go to state 57
    statement             go to state 120
    expression_statement  go to state 60
    variable              go to state 61
    expression            go to state 62
    logic_expression      go to state 63
    rel_expression        go to state 64
    simple_expression     go to state 65
    term                  go to state 66
    unary_expression      go to state 67
    factor_info           go to state 68
    factor                go to state 69


State 113

   32 statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    ADDOP        shift, and go to state 48
    NOT          shift, and go to state 49
    LPAREN       shift, and go to state 50
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 54

    variable           go to state 61
    expression         go to state 121
    logic_expression   go to state 63
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor_info        go to state 68
    factor             go to state 69


State 114

   38 statement: WHILE LPAREN expression RPAREN . statement

    IF           shift, and go to state 40
    FOR          shift, and go to state 41
    WHILE        shift, and go to state 42
    DO           shift, and go to state 43
    BREAK        shift, and go to state 44
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 45
    CONTINUE     shift, and go to state 46
    PRINTLN      shift, and go to state 47
    ADDOP        shift, and go to state 48
    NOT          shift, and go to state 49
    LPAREN       shift, and go to state 50
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 51
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 54

    compound_statement    go to state 55
    variable_decl         go to state 56
    type_specifier        go to state 57
    statement             go to state 122
    expression_statement  go to state 60
    variable              go to state 61
    expression            go to state 62
    logic_expression      go to state 63
    rel_expression        go to state 64
    simple_expression     go to state 65
    term                  go to state 66
    unary_expression      go to state 67
    factor_info           go to state 68
    factor                go to state 69


State 115

   33 statement: DO statement WHILE LPAREN . expression RPAREN SEMICOLON

    ADDOP        shift, and go to state 48
    NOT          shift, and go to state 49
    LPAREN       shift, and go to state 50
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 54

    variable           go to state 61
    expression         go to state 123
    logic_expression   go to state 63
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor_info        go to state 68
    factor             go to state 69


State 116

   39 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON
